# project-nova

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  LESSONS.md  LICENSE  README.md  REVIEW.md  SECURITY.md
nova-agent/: README.md  pyproject.toml  pytest.ini
nova-agent/src/nova_agent/: __init__.py  budget.py  config.py  main.py
nova-agent/src/nova_agent/action/: __init__.py  adb.py  game_io.py  live_io.py
nova-agent/src/nova_agent/affect/: __init__.py  rpe.py  state.py  types.py  verbalize.py
nova-agent/src/nova_agent/bus/: __init__.py  (+3 more)
nova-agent/tests/: conftest.py  test_action_adb.py  test_action_live_io.py  test_affect_reset.py  test_affect_rpe.py  test_affect_state.py  test_affect_verbalize.py  test_budget.py  test_bus_recorder.py  test_bus_replayer.py  test_bus_websocket.py  test_cliff_test_helpers.py  test_cliff_test_runner.py  test_cliff_test_trials.py  test_config.py  test_decision_arbiter.py  test_decision_baseline.py  test_decision_game_over.py  test_decision_heuristic.py  test_decision_react.py  test_decision_tot.py  test_e2e_30moves.py  test_e2e_trauma.py  test_embeddings.py  test_lab_io.py  test_lab_render.py  test_lab_scenarios.py  test_lab_sim.py  test_lab_trauma_adjudicate.py  test_lab_trauma_anchors.py  test_lab_trauma_distance.py  test_lab_trauma_dv.py  test_lab_trauma_golden.py  test_lab_trauma_runner.py  test_lab_trauma_session.py  test_llm_anthropic.py  test_llm_budgeted.py  test_llm_cache.py  test_llm_factory.py  test_llm_gemini.py  (+16 more)
nova-agent/tests/fixtures/: expected.yaml
(+225 files in other folders)
